# external_libpq

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  lookaside.txt
resources/include_android_armeabi/: pg_config.h
resources/include_linux_amd64/: pg_config.h
resources/include_macosx_amd64/: pg_config.h
resources/libpq_cmake/: CMakeLists.txt
test/: CMakeLists.txt  libpq_test.cpp
